# MWPanel-V5

./: .env  FRONTEND_SUMMARY.md  docker-compose.yml
real-estate-monitor/: .env.example  .gitignore  AGENCY_FEATURES.md  AGENCY_FEATURES_COMPLETE.md  DEPLOYMENT_UBUNTU.md  Dockerfile  Makefile  PROFESSIONAL_FEATURES.md  QUICKSTART.md  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  install.sh  nginx.conf  pyproject.toml  quickstart.sh  requirements.txt  scrape_real_data.py  seed_data.py
real-estate-monitor/alembic/: env.py
real-estate-monitor/alembic/versions/: 001_initial_migration.py  002_add_enhanced_features.py  003_add_more_features.py  004_add_offer_source_dates.py  005_add_crm_auth_and_otodom_publication.py
real-estate-monitor/app/: __init__.py  db.py  fingerprint.py  logging_config.py  main.py  manage.py  models.py  schemas.py  settings.py
real-estate-monitor/app/api/: compat_router.py  mobile_api.py
real-estate-monitor/app/connectors/: __init__.py  base.py  facebook.py  olx.py  otodom.py  popular_portals.py
real-estate-monitor/app/core/: __init__.py  logging.py  security.py
real-estate-monitor/app/data/: compat_store.json
real-estate-monitor/app/integrations/: publication_provider.py
real-estate-monitor/app/services/: __init__.py  ai_copywriter.py  alert_rules.py  api_keys.py  api_rate_limit.py  audit_logger.py  auto_matching.py  (+48 more)
real-estate-monitor/docs/: otodom-integration.md
real-estate-monitor/tests/: __init__.py  test_fingerprint.py  test_otodom_mapper.py  test_otodom_validators.py  test_parsers_minimal.py
(+49 files in other folders)
